--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         {
           "libraryName": "antd",
           "libraryDirectory": "es",
-          "style": "css"
+          "style": true
         }
       ],
       [
@@ -49,6 +49,7 @@
     "antd": "^4.4.2",
     "beautify-json": "^1.0.1",
     "fs-extra": "^9.0.1",
+    "html2canvas": "^1.0.0-rc.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
