--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     ]
   },
   "scripts": {
-    "start": "webpack-dev-server --host 192.168.1.111 --port 8080 --mode=development --display-error-details",
+    "start": "webpack-dev-server  --port 8080 --mode=development --display-error-details",
     "clean-build": "shx rm -rf build",
     "build": "yarn clean-build && webpack -p --mode=production",
     "build-serve": "yarn build && serve"
@@ -47,6 +47,7 @@
     "@ant-design/icons": "^4.2.1",
     "@hot-loader/react-dom": "^16.13.0",
     "antd": "^4.4.2",
+    "axios": "^0.21.1",
     "beautify-json": "^1.0.1",
     "fs-extra": "^9.0.1",
     "html2canvas": "^1.0.0-rc.7",
@@ -54,7 +55,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
