--- a/package.json
+++ b/package.json
@@ -32,12 +32,21 @@
         }
       ],
       [
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
       ]
     ]
   },
   "scripts": {
-    "start": "webpack-dev-server  --port 8080 --mode=development --display-error-details",
+    "start": "webpack-dev-server --host 127.0.0.1 --port 8080 --mode=development --display-error-details",
     "clean-build": "shx rm -rf build",
     "build": "yarn clean-build && webpack -p --mode=production",
     "build-serve": "yarn build && serve"
@@ -51,16 +60,21 @@
     "beautify-json": "^1.0.1",
     "fs-extra": "^9.0.1",
     "html2canvas": "^1.0.0-rc.7",
+    "mobx": "^6.3.0",
+    "mobx-react": "^7.1.0",
+    "mobx-state-tree": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^5.4.0",
